--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,11 +16,12 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
 Imports:
-	available,
-	MASS,
+		MASS,
 	coda,
 	rjags, 
 	rgl,shapes,
-	Morpho, geomorph, mvtnorm
+	Morpho, 
+	geomorph, 
+	mvtnorm
 Depends: 
     R (>= 2.10)
